# assignment3-scaling

./: pyproject.toml  scaling_laws_experiment_design.md  scaling_laws_experiment_plan.md
configs/: local_scaling_example.json  wandb_sweep_example.json
cs336_scaling/: __init__.py
cs336_scaling/local_scaling/: __init__.py  config.py  device.py  hooks.py  records.py  runner.py
notebooks/: local_scaling_workflow.ipynb
scripts/: chinchilla_isoflops.py  fit_local_scaling_law.py  run_local_scaling_job.py  run_wandb_scaling_sweep.py
